--- a/belis-app/DokumenteVC.xib
+++ b/belis-app/DokumenteVC.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DokumenteVC" customModule="belis_app" customModuleProvider="target">
@@ -41,6 +41,7 @@
                 <constraint firstItem="IVQ-D0-Miq" firstAttribute="top" secondItem="YVm-ft-RoH" secondAttribute="bottom" id="qK0-n0-TzQ"/>
                 <constraint firstItem="YVm-ft-RoH" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="uBT-YV-OGX"/>
             </constraints>
+            <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <nil key="simulatedTopBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="-113.5" y="90.5"/>
