--- a/belis-app/Main.storyboard
+++ b/belis-app/Main.storyboard
@@ -20,8 +20,8 @@
                             <imageView userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="belisBack.png" translatesAutoresizingMaskIntoConstraints="NO" id="PbO-3Z-iyw">
                                 <rect key="frame" x="-4" y="-20" width="608" height="640"/>
                             </imageView>
-                            <textField opaque="NO" clipsSubviews="YES" alpha="0.84999999999999987" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="testUser@BELIS" borderStyle="roundedRect" placeholder="Benutzername" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hWa-3o-BRn">
-                                <rect key="frame" x="243" y="220" width="115" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" alpha="0.84999999999999987" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="testUser@BELIS" borderStyle="roundedRect" placeholder="Benutzername" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hWa-3o-BRn">
+                                <rect key="frame" x="237" y="220" width="127" height="30"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="E4y-pN-mzh"/>
@@ -42,8 +42,8 @@
                                     </mask>
                                 </variation>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.74999999999999978" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="BelIS App" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vrW-uQ-lEp">
-                                <rect key="frame" x="142" y="125" width="318" height="88"/>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.74999999999999978" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BelIS App" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vrW-uQ-lEp">
+                                <rect key="frame" x="142" y="124" width="318" height="88"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="114" id="5NT-NE-e4R"/>
                                     <constraint firstAttribute="width" constant="325" id="xS2-xl-l34"/>
@@ -64,8 +64,8 @@
                                     </mask>
                                 </variation>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" alpha="0.84999999999999987" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="*********" borderStyle="roundedRect" placeholder="Passwort" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jLg-aa-Xjn">
-                                <rect key="frame" x="259" y="260" width="81" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" alpha="0.84999999999999987" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="*********" borderStyle="roundedRect" placeholder="Passwort" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jLg-aa-Xjn">
+                                <rect key="frame" x="261" y="260" width="80" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="194" id="JEQ-oI-nvb"/>
                                     <constraint firstAttribute="height" constant="30" id="wdf-h1-6KO"/>
