--- a/belis-app/table-cell-guis/DoubleTitledInfoCell.xib
+++ b/belis-app/table-cell-guis/DoubleTitledInfoCell.xib
@@ -3,43 +3,55 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="58" id="KGk-i7-Jjw" customClass="DoubleTitledInfoCell" customModule="belis_app" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="377" height="58"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="54" id="KGk-i7-Jjw" customClass="DoubleTitledInfoCell" customModule="belis_app" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="365" height="54"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="768" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <userGuides>
+                    <userLayoutGuide location="8" affinity="minY"/>
+                    <userLayoutGuide location="8" affinity="minX"/>
+                    <userLayoutGuide location="25" affinity="minY"/>
+                    <userLayoutGuide location="1" affinity="maxY"/>
+                </userGuides>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="leftTitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wO4-Eo-BEU">
-                        <rect key="frame" x="8" y="8" width="48" height="17"/>
+                        <rect key="frame" x="16" y="8" width="202" height="17"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="17" id="OO1-vK-XS0"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.16078431369999999" green="0.45098039220000002" blue="0.82745098039999998" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="leftData" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v07-yz-FVL">
-                        <rect key="frame" x="8" y="33" width="168" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="rightTitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Vu-6H-Ng8">
+                        <rect key="frame" x="222" y="8" width="135" height="17"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="21" id="Sb9-VG-Ye1"/>
+                            <constraint firstAttribute="height" constant="17" id="0bA-gV-cza"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="rightTitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Vu-6H-Ng8">
-                        <rect key="frame" x="184" y="8" width="185" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.16078431369999999" green="0.45098039220000002" blue="0.82745098039999998" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="rightData" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PYp-Ig-nFB">
-                        <rect key="frame" x="184" y="32" width="185" height="21"/>
+                        <rect key="frame" x="222" y="29" width="135" height="21"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="185" id="Pty-ZF-Ls7"/>
-                            <constraint firstAttribute="height" constant="21" id="fJx-9f-qSH"/>
+                            <constraint firstAttribute="height" constant="21" id="kFh-Ux-4Fb"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="leftData" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v07-yz-FVL">
+                        <rect key="frame" x="16" y="29" width="202" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="DM1-M7-7NZ"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -47,16 +59,32 @@
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottomMargin" secondItem="v07-yz-FVL" secondAttribute="bottom" constant="-4" id="CQ1-fV-tuj"/>
-                    <constraint firstItem="PYp-Ig-nFB" firstAttribute="trailing" secondItem="1Vu-6H-Ng8" secondAttribute="trailing" id="GPe-hV-uLU"/>
-                    <constraint firstItem="v07-yz-FVL" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="M4n-Ym-gSx"/>
-                    <constraint firstItem="PYp-Ig-nFB" firstAttribute="top" secondItem="1Vu-6H-Ng8" secondAttribute="bottom" constant="7" id="SfW-wQ-2W5"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="PYp-Ig-nFB" secondAttribute="bottom" constant="-3.5" id="oUH-F5-4og"/>
-                    <constraint firstItem="PYp-Ig-nFB" firstAttribute="leading" secondItem="1Vu-6H-Ng8" secondAttribute="leading" id="rFd-lg-Pai"/>
-                    <constraint firstItem="wO4-Eo-BEU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="tAC-Nw-iMO"/>
-                    <constraint firstItem="wO4-Eo-BEU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="uHo-Ww-ltr"/>
-                    <constraint firstItem="PYp-Ig-nFB" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="vWd-ly-WY5"/>
+                    <constraint firstItem="wO4-Eo-BEU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="0nm-W9-9Nc"/>
+                    <constraint firstItem="v07-yz-FVL" firstAttribute="width" secondItem="1Vu-6H-Ng8" secondAttribute="width" multiplier="1.5" id="35Y-N9-frj"/>
+                    <constraint firstItem="v07-yz-FVL" firstAttribute="height" secondItem="PYp-Ig-nFB" secondAttribute="height" id="AyE-eu-g8t"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="PYp-Ig-nFB" secondAttribute="trailing" id="GrH-bV-9Fo"/>
+                    <constraint firstItem="v07-yz-FVL" firstAttribute="width" secondItem="PYp-Ig-nFB" secondAttribute="width" multiplier="1.5" id="IlJ-Xb-Bg0"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="PYp-Ig-nFB" secondAttribute="bottom" id="K73-Ol-MDY"/>
+                    <constraint firstItem="v07-yz-FVL" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="8" id="W7H-nF-WCj"/>
+                    <constraint firstItem="PYp-Ig-nFB" firstAttribute="top" secondItem="1Vu-6H-Ng8" secondAttribute="bottom" constant="4" id="WMK-6E-1f4"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="v07-yz-FVL" secondAttribute="bottom" id="YO2-I6-h1s"/>
+                    <constraint firstItem="1Vu-6H-Ng8" firstAttribute="height" secondItem="wO4-Eo-BEU" secondAttribute="height" id="cD1-E3-Jwg"/>
+                    <constraint firstItem="1Vu-6H-Ng8" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="fCY-a6-mHn"/>
+                    <constraint firstItem="PYp-Ig-nFB" firstAttribute="leading" secondItem="v07-yz-FVL" secondAttribute="trailing" constant="4" id="hSb-XQ-Czh"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="1Vu-6H-Ng8" secondAttribute="trailing" id="jPl-5h-8jB"/>
+                    <constraint firstItem="wO4-Eo-BEU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="8" id="juo-VT-ltT"/>
+                    <constraint firstItem="v07-yz-FVL" firstAttribute="top" secondItem="wO4-Eo-BEU" secondAttribute="bottom" constant="4" id="kIS-77-Bct"/>
+                    <constraint firstItem="v07-yz-FVL" firstAttribute="width" secondItem="wO4-Eo-BEU" secondAttribute="width" id="pK1-pS-uYV"/>
+                    <constraint firstItem="1Vu-6H-Ng8" firstAttribute="leading" secondItem="wO4-Eo-BEU" secondAttribute="trailing" constant="4" id="pPo-QI-tu6"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="AyE-eu-g8t"/>
+                        <exclude reference="YO2-I6-h1s"/>
+                        <exclude reference="cD1-E3-Jwg"/>
+                        <exclude reference="K73-Ol-MDY"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <connections>
                 <outlet property="lblLeftData" destination="v07-yz-FVL" id="RFd-hj-XTs"/>
@@ -64,7 +92,7 @@
                 <outlet property="lblRightData" destination="PYp-Ig-nFB" id="MGE-eL-lBN"/>
                 <outlet property="lblRightTitle" destination="1Vu-6H-Ng8" id="sR7-C2-mvq"/>
             </connections>
-            <point key="canvasLocation" x="-130.5" y="114"/>
+            <point key="canvasLocation" x="-603.5" y="232"/>
         </tableViewCell>
     </objects>
 </document>
